--- a/EPath-v0.0.1/Base.lproj/Main.storyboard
+++ b/EPath-v0.0.1/Base.lproj/Main.storyboard
@@ -176,11 +176,14 @@
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PRY-Gg-LBF" userLabel="ViewOtherResponses">
-                                                <rect key="frame" x="22" y="719" width="359" height="207"/>
+                                                <rect key="frame" x="22" y="719" width="359" height="173"/>
                                                 <subviews>
                                                     <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="justified" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r2r-q1-XW5">
-                                                        <rect key="frame" x="8" y="45" width="343" height="154"/>
+                                                        <rect key="frame" x="8" y="45" width="343" height="108"/>
                                                         <color key="backgroundColor" red="0.78823529411764703" green="0.78823529411764703" blue="0.78823529411764703" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="108" id="rCw-zh-gWr"/>
+                                                        </constraints>
                                                         <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </string>
                                                         <color key="textColor" systemColor="labelColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -188,6 +191,9 @@
                                                     </textView>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Other responses" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1gz-gV-DLt">
                                                         <rect key="frame" x="8" y="16" width="127" height="21"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="21" id="Bkk-Ob-7gV"/>
+                                                        </constraints>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -195,14 +201,14 @@
                                                 </subviews>
                                                 <color key="backgroundColor" red="0.78823529411764703" green="0.78823529411764703" blue="0.78823529411764703" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="bottom" secondItem="r2r-q1-XW5" secondAttribute="bottom" constant="8" id="3DS-WH-0yq"/>
+                                                    <constraint firstAttribute="bottom" secondItem="r2r-q1-XW5" secondAttribute="bottom" constant="20" id="3DS-WH-0yq"/>
                                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1gz-gV-DLt" secondAttribute="trailing" constant="20" symbolic="YES" id="3SL-T0-PMX"/>
                                                     <constraint firstAttribute="trailing" secondItem="r2r-q1-XW5" secondAttribute="trailing" constant="8" id="7m1-VO-fFD"/>
+                                                    <constraint firstItem="1gz-gV-DLt" firstAttribute="top" secondItem="PRY-Gg-LBF" secondAttribute="top" constant="16" id="8Hn-Ko-RLh"/>
                                                     <constraint firstItem="r2r-q1-XW5" firstAttribute="leading" secondItem="PRY-Gg-LBF" secondAttribute="leading" constant="8" id="A6v-6e-jQ1"/>
                                                     <constraint firstItem="r2r-q1-XW5" firstAttribute="top" secondItem="1gz-gV-DLt" secondAttribute="bottom" constant="8" id="DIS-IH-JvI"/>
                                                     <constraint firstItem="1gz-gV-DLt" firstAttribute="leading" secondItem="r2r-q1-XW5" secondAttribute="leading" id="Vpn-jd-hS4"/>
                                                     <constraint firstItem="1gz-gV-DLt" firstAttribute="leading" secondItem="PRY-Gg-LBF" secondAttribute="leadingMargin" id="o1z-2h-Go1"/>
-                                                    <constraint firstItem="1gz-gV-DLt" firstAttribute="top" secondItem="PRY-Gg-LBF" secondAttribute="top" constant="16" id="s6u-DF-Y1T"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
@@ -214,7 +220,6 @@
                                             <constraint firstItem="PRY-Gg-LBF" firstAttribute="top" secondItem="cG6-tM-adv" secondAttribute="top" constant="719" id="Oe8-GE-Qk7"/>
                                             <constraint firstAttribute="height" constant="1500" id="Oxb-4N-cSr"/>
                                             <constraint firstAttribute="trailing" secondItem="kwg-kv-A05" secondAttribute="trailing" constant="16" id="Uk1-ar-auD"/>
-                                            <constraint firstAttribute="bottom" secondItem="PRY-Gg-LBF" secondAttribute="bottom" constant="574" id="UqZ-QJ-UFC"/>
                                             <constraint firstItem="hmp-kF-Qp4" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="cG6-tM-adv" secondAttribute="leading" id="Vdo-TV-e4P"/>
                                             <constraint firstItem="hmp-kF-Qp4" firstAttribute="top" secondItem="kwg-kv-A05" secondAttribute="bottom" constant="29" id="WhA-qj-Vfk"/>
                                             <constraint firstItem="kwg-kv-A05" firstAttribute="leading" secondItem="cG6-tM-adv" secondAttribute="leading" constant="22" id="Xry-0o-emO"/>
@@ -259,7 +264,8 @@
                         <outlet property="scrollView" destination="Uph-XT-k9b" id="FkC-6d-np3"/>
                         <outlet property="txt_Detail_Description" destination="Ckh-aI-jy7" id="xFK-gc-MRT"/>
                         <outlet property="txt_Detail_Response" destination="qlI-Ep-SdF" id="z87-2o-O33"/>
-                        <outlet property="txt_Facts" destination="r2r-q1-XW5" id="eZ0-jQ-GZl"/>
+                        <outlet property="txt_Other_Response" destination="r2r-q1-XW5" id="lii-kp-66h"/>
+                        <outlet property="txt_Other_Response_Height" destination="rCw-zh-gWr" id="GiO-Yp-HD8"/>
                         <outlet property="view_BackgroundResponse" destination="kwg-kv-A05" id="EBb-yj-OpW"/>
                         <outlet property="view_Other_Responses" destination="PRY-Gg-LBF" id="IWn-aj-1uf"/>
                     </connections>
